2009-09-25  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh: (CygbuildCmdInstallCheckBinFiles):
	Correct ls -l output handling: Read file sizes correctly.

2009-09-16  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildMatchGlob): New.
	(CygbuildDefineGlobalCommands): Add missing double quote.
	(CygbuildSrcDirCheck): Adjust message.
	(CygbuildCmdDownloadUpstream): change external
	command name from 'mywebget' to 'pwget'. Use
	'type -p', not which(1).

2009-08-06    Jari Aalto  <jari.aalto@cante.net>

	* bin/Makefile (install-man): Call target 'man'.
	(INSTALL_OBJS_MAN1): Remove unneeded lib/*.1

	* bin/cygbuild.sh: (CygbuildCommandMain):
	Display word FATAL if getopt is not available.
	(CygbuildDefineGlobalCommands): Check that file(1)
	utility exists.

2009-02-06 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/Makefile (man): Add cygbuild.1
	(doc): New target.
	(cygbuild.1): New target.
	(clean): Clean manual pages.

2009-02-05 Thu  Jari Aalto  <jari.aalto@cante.net>

	* doc/index.html: (Install from Version Control): correct
	'make install-etc' to 'make install-symlink'

	* bin/lib/cygbuild.pl (UpdateAnnouncement): Call UpdateYears().

	* Makefile: (help): New target.
	(install-symlink): New target.

	* TODO: Add headings: incomplete, planned.

	* README: (Important files): Update directory information.

	* doc/devel/README.txt: (Information for developers): Clean up
	section.
	(Policies): Update. Add CODING STYLE.

	* doc/Makefile (help): New target. Document other targets.

	* bin/Makefile: (help): New target. Document other targets.
	(install-symlink): Adjust comment.

	* bin/cygbuild.sh (CygbuildIsDirMatch): Check directory before
	`cd'.
	(CygbuildCommandMain): Add getopt safeguards. If 'getopt' is not
	available, options cannot be parsed. If `CygbuildIsGbsCompat', do
	not run `CygbuildBootVariablesGlobalShareMain'.
	(CygbuildTreeSymlinkCopy): Simplify 'lndir' error message.